--- a/dd_vis.html
+++ b/dd_vis.html
@@ -646,7 +646,7 @@
 
 	<nav id="menu-wrap">    
 		<ul id="menu">
-			<li id="menu-special"><img src="kinlogo2.png" style="margin-left: 10px;margin-right:10px;height:35px;"/> </li>
+			<li id="menu-special"><img src="animage.png" style="margin-left: 10px;margin-right:10px;height:35px;"/> </li>
             <li>
                 <a href="#">Visualization</a>
                 <ul>
